kubernetes/accounting/firefly3/firefly3-db.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly3-db
  namespace: accounting
  labels:
    app: firefly3-db
    # sablier.enable: "true"
    # sablier.group: firefly3
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: firefly3-db
  template:
    metadata:
      labels:
        task: accounting
        app: firefly3-db
    spec:
      # Essential
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: la1r.workload/essential
                operator: In
                values:
                - "true"
      containers:
      - name: database
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
        image: mariadb:11
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: firefly3-database
          mountPath: /var/lib/mysql

      volumes:
      - name: firefly3-database
        persistentVolumeClaim:
          claimName: firefly3-database-claim

---
apiVersion: v1
kind: Service
metadata:
  name: firefly3-db
  namespace: accounting
spec:
  ports:
  - name: db
    port: 3306
    targetPort: 3306
  selector:
    app: firefly3-db
